# balancebot-F18

./: 1113leftturn  1113rightturn  1113rtrlertturn  4leftturn  4rightturn  Balancebot_data.txt  Makefile  README.txt  command  odovsopti  phi30cm  phi3cm  psi 0.8  psi0.08  theta002  theta003  theta012  theta015  theta03
BalancebotPlan/: CMakeLists.txt  astar.cpp  astar.h  main.cpp
balancebot/: Makefile  balancebot.c  balancebot.h
common/: mb_controller.c  mb_controller.h  mb_defs.h  mb_motor.c  mb_motor.h  mb_odometry.c  mb_odometry.h  mb_structs.h
java/: Makefile
lcmtypes/: Makefile  balancebot_gate_t.lcm  balancebot_msg_t.lcm
measure_motors/: measure_motors.c
optitrack/: optitrack_driver.cpp
optitrack_example/: Makefile  optitrack_example.c
test_motors/: test_motors.c
